--- a/contacto.html
+++ b/contacto.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <link rel="stylesheet" href="style.css">
-    <div id="header-placeholder" role="banner"></div>
+    <header><div id="header-placeholder" role="banner"></div></header>
+    
     <section id="contact" class="section pb-0">
 
         <div class="container">
-           
+            <main class="main-content container m-2">
             <h1 class="section-title mb-5">Contacto</h1>
 
             <div class="row align-items-center justify-content-between">
