--- a/header.html
+++ b/header.html
@@ -11,6 +11,9 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Página Principal</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="trucos.html">Trucos de Estudio</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="biologia.html">Biología</a>
                     </li>
                     <li class="nav-item">
