--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-  <div id="header-placeholder" role="banner"></div>
+  <header><div id="header-placeholder" role="banner"></div></header>
     
-    <main class="container">
+  <main class="main-content container m-2">
 <h1 id="profe">Profe Brenda</h1>
 <h2>Busquemos nuevas formas de Aprender</h2>
     </main>
