--- a/2year.html
+++ b/2year.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="header-placeholder" role="banner"></div>
+    <header><div id="header-placeholder" role="banner"></div></header>
     
     <script>
         // Cargar el contenido del header
