--- a/3year.html
+++ b/3year.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tercer Año</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
 </head>
-<body>
-    <div id="header-placeholder" role="banner"></div>
-    <main>
-        <h1>ADN</h1>
+<body class="container">
+    <header><div id="header-placeholder" role="banner"></div></header>
+    <main class="container m-2">
+        <div class="resaltado">
+            <h1>Genética</h1>
+            <div class="content-container indigo-bg">
+                <p>La Genética es la rama de la biología que estudia los mecanismos de herencia biológica, el ADN, el ARN, los genes y la evolución.</p><br>
+                En esta sección vamos a repasar una parte del tema.
+
+            </div>
+        </div>
+        <div class="fondoBlanco">
+            <h2>Nucleótidos</h2>
+            <div class="indigo-bg">
+                <p>Los Nucleótidos son las estructuras moleculares con las que se construye el ADN y ARN. Son estructuras químicas orgánicas que contienen información genética e instrucciones para la síntesis de proteínas. Básicamente son los ladrillos o parte del rompecabezas con los que construimos el ADN y el ARN.</p>
+                <img src="./img/biología/nucleotido_estructura.png" alt="imagen de la estructura de un nucleótido" class="nucleotide-image indigo-bg"/>
+                <p class="indigo-bg">Veamos un poco más en detalle las partes de los nucleótidos para entender un poco más. La parte del azúcar puede ser de 2 tipos:<br></p>
+                <ul class="indigo-bg">
+                    <li>Ribosa</li>
+                    <li>Desoxirribosa</li>
+                </ul>
+            </div>
+        </div>
+            <section class="indigo-bg">
+                <ul>
+                    <h3>Links a Libros Sobre ADN</h3>
+                    <li><a href="https://infolibros.org/libros-pdf-gratis/biologia/adn/" target="_blank">InfoLibros</a></li>
+                </ul>
+            </section>
+        </div>
     </main>
+    
+    
     <script>
         // Cargar el contenido del header
         fetch('header.html')
