--- a/3year.html
+++ b/3year.html
@@ -24,11 +24,14 @@
             <div class="indigo-bg">
                 <p>Los Nucleótidos son las estructuras moleculares con las que se construye el ADN y ARN. Son estructuras químicas orgánicas que contienen información genética e instrucciones para la síntesis de proteínas. Básicamente son los ladrillos o parte del rompecabezas con los que construimos el ADN y el ARN.</p>
                 <img src="./img/biología/nucleotido_estructura.png" alt="imagen de la estructura de un nucleótido" class="nucleotide-image indigo-bg"/>
+                <p>Y estos eslabones se van a unir uno a otros, formado una cadena.</p>
+                <img src="./img/biología/nucleotidos_unidos.jpg" alt="cadena de nucleotidos"/>
                 <p class="indigo-bg">Veamos un poco más en detalle las partes de los nucleótidos para entender un poco más. La parte del azúcar puede ser de 2 tipos:<br></p>
                 <ul class="indigo-bg">
                     <li>Ribosa</li>
                     <li>Desoxirribosa</li>
                 </ul>
+                Según el tipo de azucar que la conforme
             </div>
         </div>
             <section class="indigo-bg">
